--- a/react/books-list/package.json
+++ b/react/books-list/package.json
@@ -7,11 +7,11 @@
     "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server -p 3001 --watch db.json"
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "json-server": "^0.17.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -25,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^6.3.1"
   }
 }
